force-app/main/default/objects/Lead_Ranking_Rule__mdt/Lead_Ranking_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Stores rules for automatically ranking Leads based on Industry and Annual Revenue.</description>
    <label>Lead Ranking Rule</label>
    <pluralLabel>Lead Ranking Rules</pluralLabel>
</CustomObject>