force-app/main/default/objects/Lead_Ranking_Rule__mdt/fields/Max_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Max_Annual_Revenue__c</fullName>
    <label>Max Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>