force-app/main/default/objects/Lead_Ranking_Rule__mdt/fields/Min_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Min_Annual_Revenue__c</fullName>
    <label>Min Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>