force-app/main/default/objects/Lead_Ranking_Rule__mdt/fields/Priority_Rating__c.field-meta.xml
<CustomField>
    <fullName>Priority_Rating__c</fullName>
    <label>Priority Rating</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>